--- a/start.html
+++ b/start.html
@@ -4,7 +4,7 @@
         <title>Страницы</title>
       <link href="https://fonts.googleapis.com/css2?family=Rubik&amp;display=swap" rel="stylesheet">
 
-		<link rel="stylesheet" type="text/css" href="/css/main.css?v=1.2">
+		<link rel="stylesheet" type="text/css" href="css/main.css?v=1.2">
     <style>
     body {font-family: 'Rubik', sans-serif;}
     ul li a {font-size: 16px; color: #32999b;
@@ -17,15 +17,15 @@
   <div class="container">
 	<h1>Список страниц</h1>
 	<ul>
-		<li><a href="/index.html" target="_blank">Главная</a></li>
-		<li><a href="/catalog.html" target="_blank">Страница каталога</a></li>
-		<li><a href="/category.html" target="_blank">Страница категории</a></li>
-		<li><a href="/category2.html" target="_blank">Страница категории 2</a></li>
-		<li><a href="/tovar.html" target="_blank">Страница товара</a></li>
-		<li><a href="/proizvodstvo.html" target="_blank">Производство</a></li>
-		<li><a href="/news.html" target="_blank">Новости</a></li>
-		<li><a href="/contacts.html" target="_blank">Контакты</a></li>
-		<li><a href="/about.html" target="_blank">О компании</a></li>
+		<li><a href="index.html" target="_blank">Главная</a></li>
+		<li><a href="catalog.html" target="_blank">Страница каталога</a></li>
+		<li><a href="category.html" target="_blank">Страница категории</a></li>
+		<li><a href="category2.html" target="_blank">Страница категории 2</a></li>
+		<li><a href="tovar.html" target="_blank">Страница товара</a></li>
+		<li><a href="proizvodstvo.html" target="_blank">Производство</a></li>
+		<li><a href="news.html" target="_blank">Новости</a></li>
+		<li><a href="contacts.html" target="_blank">Контакты</a></li>
+		<li><a href="about.html" target="_blank">О компании</a></li>
 		
 	
 	</ul>
